--- a/interface/package.json
+++ b/interface/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.8.0",
+    "echarts": "^5.4.2",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
