--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[env]
+framework = arduino
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
-framework = arduino
+
+[env:esp8266]
+platform = espressif8266
+board = nodemcuv2
